<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="freaktemplate.fooddelivery.Register">
    <ImageView
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:background="#314147"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp">
    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="fill_parent"
        android:layout_height="60dp">
        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:id="@+id/img_back"
            android:layout_marginStart="-2dp"
            android:src="@drawable/back_btn"
            />
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_title">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <freaktemplate.utils.RoundedImageView
        android:id="@+id/img_user"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/profile_reg" />
    <LinearLayout
        android:id="@+id/rel_camara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/img_user"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/camera"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:background="@drawable/camera_btn"
            android:text="@string/txt_take_a_picture"
            android:textColor="#fff"
            android:gravity="bottom|right"
            android:paddingBottom="2dp"
            android:paddingRight="20dp"/>
        <Button
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:id="@+id/gallery"
            android:background="@drawable/gallery_btn"
            android:text="@string/txt_select_picture"
            android:textColor="#fff"
            android:gravity="bottom|left"
            android:paddingBottom="2dp"
            android:paddingLeft="14dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rel_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_camara"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >

        <RelativeLayout
            android:id="@+id/rel_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true">
            </LinearLayout>
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:focusableInTouchMode="true"
                app:keyboardAutoPopOnSearch="false"/>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/ccp">
                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="#14B657"
                    android:hint="@string/hint_phone_number"

                    />
            </android.support.design.widget.TextInputLayout>


            </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_code"

            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_full_name"
                    android:inputType="text"
                    android:textColorHint="#F2282B"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_name"

                >
                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_email"

                >
                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

            <LinearLayout
                android:id="@+id/lin_condition"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_below="@+id/rel_name"
                android:layout_marginTop="-30dp"
                android:layout_marginStart="-35dp"
                >
                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                 android:scaleY=".2"
                    android:scaleX=".2"
                android:button="@drawable/customdrawablecheckbox"
                    />
                <!--android:button="@drawable/customdrawablecheckbox"-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_t_and_c"
                    android:layout_marginStart="-25dp"
                    />
            </LinearLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lin_condition"
            android:layout_marginTop="-15dp"
            >
            <Button
                android:id="@+id/btn_signup"
                android:text="@string/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:textColor="#14B657"
                android:textSize="20dp"
                android:textAllCaps="false"

                tools:ignore="SpUsage" />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/txt_code"
    android:text="hello"
    android:visibility="invisible"

    />


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
    </ScrollView>
    </RelativeLayout>
</RelativeLayout>
