<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="freaktemplate.fooddelivery.Login">

    <RelativeLayout
        android:id="@+id/rel_header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbarheight"
        android:background="@color/toolbarcolor">
        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:tint="@color/white"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/ib_back"
            android:layout_centerVertical="true"
            android:text="@string/txt_login"
            android:textColor="#fff"
            android:textSize="@dimen/toolbartitle"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/rel_header"

        >
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:id="@+id/img_delivery"
                    android:layout_marginTop="32dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_loginscreen"
                    android:contentDescription="@string/img_delivery"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/img_delivery"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/medium"
                        android:hint="@string/email_required"
                        android:inputType="textEmailAddress"
                        android:textColor="#000"
                        tools:ignore="SpUsage" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_email"
                    >
                    <EditText
                        android:id="@+id/edit_pwd"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:textSize="@dimen/medium"
                        android:textAlignment="viewStart"
                        android:hint="@string/passward_required"
                        android:inputType="textPassword"
                        android:textColor="#000"
                        tools:ignore="SpUsage" />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/input_layout_password"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="16dp"
                    android:background="@mipmap/login_btn_bg"
                    android:text="@string/txt_login"
                    android:textAllCaps="false"
                    android:textColor="#8D1926"
                    android:textSize="@dimen/medium"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/btn_login"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@android:color/transparent"
                    android:text="@string/txt_new_register"
                    android:textAllCaps="false"
                    android:textColor="#8D1926"
                    android:gravity="end"
                    android:textAlignment="viewEnd"
                    android:textSize="@dimen/medium"
                    tools:ignore="SpUsage" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_below="@+id/btn_register"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="25dp"
                    android:background="@mipmap/or_btn"/>

                <TextView
                    android:id="@+id/txt_or1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_register"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="OR"
                    android:textColor="#000"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <Button
                    android:id="@+id/btn_fb"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/txt_or1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@mipmap/fb_btn_bg"
                    android:text="@string/login_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/btn_google"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btn_fb"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@mipmap/google_btn_bg"
                    android:text="@string/login_with_google"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/btn_login_delivery"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btn_google"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp"
                    android:textSize="@dimen/medium"
                    android:background="@android:color/transparent"
                    android:text="@string/login_with_delivery"
                    android:textAllCaps="true"
                    android:textColor="@color/txt_orange"
                    tools:ignore="SpUsage" />


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>